--- a/Site/css/styles.css
+++ b/Site/css/styles.css
@@ -3,54 +3,78 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    margin: 0;
+    padding: 0;
 }
-
+/*HEADER-MENU*/
 header{
-    background-color: white;
+    width: 100%;
+    background: linear-gradient(to right, #212121, black, #212121);
     text-align: center;
-    margin: 0 0 20px 0;
-    border-radius: 10px;
+    margin-bottom: 50px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+}
+.logo{
+    background-image: url(../img/logo.png);
+    display: block;
+    width: 100px;
+    height: 100px;
+}
+.logo:hover{
+    background-image: url(../img/logo-hover.png);
+}
+/*CONTENT*/
+.main_content{
+    padding: 5px;
+    margin: auto;
+    width: 90%;
+    background: white;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
 }
 .left_bar{
     float:left;
     width: 40%;
     height: auto;
     text-align: center;
-    margin: 0 1% 0 0;
+    margin: 0 1% 1% 0;
 }
 .right_bar{
     float:left;
     width: 59%;
     height: 100%;
     text-align: center;
+    margin: 0 0 1% 0;
 }
 .right_bar_t{
     background: white;
     float:left;
     width: 100%;
     height: auto;
-    font-size: 50px;
-    border-radius: 10px;
+    font-weight: bold;
+    font-size: 35px;
     margin: 0 0 1% 0;
     padding: 1% 0;
+    border-bottom: 1px solid black;
 }
 .right_bar_l{
     background: white;
     float:left;
     width: 47.5%;
     height: 100%;
-    font-size: 35px;
-    border-radius: 10px;
+    font-size: 30px;
     padding: 1%;
-    margin: 0 1% 0 0;
+    border-right: 1px solid black;
 }
 .right_bar_r{
     background: white;
     float:left;
     width: 47.5%;
     height: auto;
-    font-size: 35px;
-    border-radius: 10px;
+    font-size: 30px;
     padding: 1%;
 }
 img{
@@ -58,4 +82,47 @@ img{
     max-height:100%;
     border-radius: 10px;
 }
-
+/*flex&grid homework*/
+.container-flex{
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    margin: 10px 0 0 0;
+    padding-top: 5px;
+    text-align: center;
+    font-weight: bold;
+    text-transform: uppercase;
+    background: silver;
+    border-radius: 10px;
+}
+.flex-item{
+    height: auto;
+    width: auto;
+}
+.anim:hover{
+    transform: scale(0.9);
+}
+.container-grid{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    grid-column-gap: 10px;
+    grid-row-gap: 10px;
+    margin: 10px 0 0 0;
+    text-align: center;
+    font-weight: bold;
+    background: silver;
+    border-radius: 10px;
+}
+/*FOOTER*/
+footer{
+    width: 100%;
+    background: linear-gradient(to right, #212121, black, #212121);
+    color: white;
+    text-align: center;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+.information-footer{
+    padding: 10px;
+}
