--- a/Site/css/styles.css
+++ b/Site/css/styles.css
@@ -3,8 +3,13 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
+    font-family: MyFont;
     margin: 0;
     padding: 0;
+}
+@font-face {
+    font-family: MyFont;
+    src: url(../font/SFUIDisplay-Light.ttf)
 }
 /*HEADER-MENU*/
 header{
@@ -16,6 +21,8 @@ header{
     border-bottom-right-radius: 10px;
     display: grid;
     grid-template-columns: repeat(3,1fr);
+    position: sticky;
+    top: 0;
 }
 .logo{
     background-image: url(../img/logo.png);
@@ -28,61 +35,56 @@ header{
 }
 /*CONTENT*/
 .main_content{
-    padding: 5px;
+    padding: 10px;
     margin: auto;
     width: 90%;
+    min-height: 100vh;
     background: white;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
-.left_bar{
-    float:left;
-    width: 40%;
-    height: auto;
+.about-me{
+    border-radius: 10px;
+    display: grid;
+    justify-items: center;
     text-align: center;
-    margin: 0 1% 1% 0;
+    grid-row-gap: 5px;
+    grid-column-gap: 5px;
+    grid-template-areas:
+      "pho tp tp"
+      "pho lt rt"
+      "pho lt rt";
 }
-.right_bar{
-    float:left;
-    width: 59%;
-    height: 100%;
-    text-align: center;
-    margin: 0 0 1% 0;
-}
-.right_bar_t{
-    background: white;
-    float:left;
-    width: 100%;
-    height: auto;
-    font-weight: bold;
-    font-size: 35px;
-    margin: 0 0 1% 0;
-    padding: 1% 0;
+.top{
     border-bottom: 1px solid black;
+    font-weight: bold;
+    font-size: 20px;
+    grid-area: tp;
 }
-.right_bar_l{
-    background: white;
-    float:left;
-    width: 47.5%;
-    height: 100%;
-    font-size: 30px;
-    padding: 1%;
+.left{
+    padding: 0 5px 0 0;
     border-right: 1px solid black;
+    grid-area: lt;
+    font-size: 20px;
 }
-.right_bar_r{
-    background: white;
-    float:left;
-    width: 47.5%;
-    height: auto;
-    font-size: 30px;
-    padding: 1%;
+.right{
+    padding: 0 5px 0 5px;
+    grid-area: rt;
+    font-size: 20px;
+}
+.photo{
+    grid-area: pho;
+}
+.top, .left, .right, .photo{
+    height: 100%;
+    width: 100%;
 }
 img{
     max-width:100%;
     max-height:100%;
     border-radius: 10px;
 }
-/*flex&grid homework*/
+/*flex homework*/
 .container-flex{
     width: 100%;
     display: flex;
@@ -103,19 +105,9 @@ img{
 .anim:hover{
     transform: scale(0.9);
 }
-.container-grid{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-column-gap: 10px;
-    grid-row-gap: 10px;
-    margin: 10px 0 0 0;
-    text-align: center;
-    font-weight: bold;
-    background: silver;
-    border-radius: 10px;
-}
 /*FOOTER*/
 footer{
+    height: 100%;
     width: 100%;
     background: linear-gradient(to right, #212121, black, #212121);
     color: white;
@@ -123,6 +115,110 @@ footer{
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
-.information-footer{
+.footer-main{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
     padding: 10px;
+}
+.social-icons {
+    list-style: none;
+    margin: 10px;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+.social-icons a {
+    text-decoration: none;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    margin: 0 6px;
+    font-size: 26px;
+    overflow: hidden;
+    position: relative;
+    color: silver;
+    border: 2px solid silver;
+    transition: all 0.2s linear 0s;
+}
+.social-icons a:after {
+    content: "";
+    display: block;
+    width: 90%;
+    height: 90%;
+    top: -110%;
+    left: 0;
+    right: 0;
+    margin: auto;
+    position: absolute;
+    background-color: silver;
+    border-radius: 50%;
+}
+.social-icons a i{
+    position: relative;
+    z-index: 1;
+}
+.social-icons a:hover {
+    color: black;
+}
+.social-icons a:hover:after {
+    top: 5%;
+    transition: all 0.2s linear 0s;
+}
+/*MEDIA: IPHONE X, IPAD, PC*/
+@media screen and (max-width: 375px){
+    .about-me{
+        grid-template-areas:
+      "pho"
+      "tp"
+      "lt "
+      "rt";
+    }
+    .left{
+        border-right: 0px solid black;
+        border-bottom: 1px solid black;
+    }
+    .right{
+        border-bottom: 1px solid black;
+    }
+    .container-flex{
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .footer-main{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+@media screen and (min-width: 376px) and (max-width: 768px){
+    .about-me{
+        grid-template-areas:
+      "pho"
+      "tp"
+      "lt "
+      "rt";
+    }
+    .left{
+        border-right: 0px solid black;
+        border-bottom: 1px solid black;
+    }
+    .right{
+        border-bottom: 1px solid black;
+    }
+    .container-flex{
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+    }
+    .footer-main{
+        grid-template-columns: repeat(1,1fr);
+    }
+}
+@media screen and (min-width: 769px) and (max-width: 1360px){
+    .about-me{
+        grid-template-areas:
+      "pho pho"
+      "tp tp"
+      "lt rt";
+    }
 }
